tests/regression/error/hw5_error08.nex
fun f()
{
   return false;
}
   print (f() + 1);
